work on patron addition

--- a/MyLibrary/Views/Books/Delete.cshtml
+++ b/MyLibrary/Views/Books/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.ISBN)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CheckedOut)
+            @Html.DisplayNameFor(model => model.PatronId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CheckedOut)
+            @Html.DisplayFor(model => model.Patron.PatronId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Library)
