--- a/MyLibrary/Views/Books/Details.cshtml
+++ b/MyLibrary/Views/Books/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.ISBN)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CheckedOut)
+            @Html.DisplayNameFor(model => model.PatronId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CheckedOut)
+            @Html.DisplayFor(model => model.PatronId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Library)
