--- a/MyLibrary/Views/Books/Edit.cshtml
+++ b/MyLibrary/Views/Books/Edit.cshtml
@@ -29,16 +29,12 @@
                 <span asp-validation-for="Book.ISBN" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="Book.CheckedOut" /> @Html.DisplayNameFor(model => model.Book.CheckedOut)
-                    </label>
-                </div>
+                <label asp-for="Book.PatronId" class="control-label"></label>
+                <select asp-for="Book.PatronId" class="form-control" asp-items="@Model.Patrons"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Book.LibraryId" class="control-label"></label>
                 <select asp-for="Book.LibraryId" class="form-control" asp-items="@Model.Libraries"></select>
-                <span asp-validation-for="Book.LibraryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
