--- a/MyLibrary/Views/Patrons/Create.cshtml
+++ b/MyLibrary/Views/Patrons/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLibrary.Models.Patron
+﻿@model MyLibrary.ViewModels.PatronCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,14 +13,18 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="Patron.FirstName" class="control-label"></label>
+                <input asp-for="Patron.FirstName" class="form-control" />
+                <span asp-validation-for="Patron.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="Patron.LastName" class="control-label"></label>
+                <input asp-for="Patron.LastName" class="form-control" />
+                <span asp-validation-for="Patron.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Patron.LibraryId" class="control-label"></label>
+                <select asp-for="Patron.LibraryId" class="form-control" asp-items="@Model.LibraryOfChoice"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
