--- a/MyLibrary/Views/Patrons/Delete.cshtml
+++ b/MyLibrary/Views/Patrons/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd>
             @Html.DisplayFor(model => model.LastName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LibraryId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.LibraryId)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
