--- a/MyLibrary/Views/Patrons/Edit.cshtml
+++ b/MyLibrary/Views/Patrons/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLibrary.Models.Patron
+﻿@model MyLibrary.ViewModels.PatronEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,22 +12,45 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="PatronId" />
+            <input type="hidden" asp-for="@Model.Patron.PatronId" />
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="@Model.Patron.FirstName" class="control-label"></label>
+                <input asp-for="@Model.Patron.FirstName" class="form-control" />
+                <span asp-validation-for="@Model.Patron.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="@Model.Patron.LastName" class="control-label"></label>
+                <input asp-for="@Model.Patron.LastName" class="form-control" />
+                <span asp-validation-for="@Model.Patron.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <label asp-for="@Model.Patron.LibraryId" class="control-label"></label>
+                <select asp-for="@Model.Patron.LibraryId" class="form-control" asp-items="@Model.LibraryOfChoice"></select>
             </div>
-        </form>
+            <hr />
+            <div>
+               
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => Model.CurrentBooks)
+                    </dt>
+
+                    @foreach (var book in Model.CurrentBooks)
+                    {
+                        <dd>
+                            @Html.DisplayFor(modelbook => book.Title)
+                        </dd>
+                    }
+                </dl>
+                
+                
+
+</div>
+    <div class="form-group">
+        <input type="submit" value="Save" class="btn btn-default" />
     </div>
+    </form>
+</div>
 </div>
 
 <div>
